plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
}
repositories {
    mavenCentral()
}

ext {
    querydslVersion = '5.1.0'
    mysqlVersion = "8.0.33"
    set('springCloudVersion', "2025.0.0")
}



subprojects {subproject ->
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    group = 'com.ll'
    version = '0.0.1-SNAPSHOT'
    description = 'Gooream'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }
    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }
    repositories {
        mavenCentral()
    }
    def excluded = ['core', 'discovery', 'gateway']
    if (!excluded.contains(subproject.name)) {
        subproject.dependencies {
            implementation project(':core')
        }
    }

    dependencies {

        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    }
    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        }
    }
    tasks.named('test') {
        useJUnitPlatform()
    }

}

